<resources>
    <string name="app_name">TaskManagerApp</string>
    <string name="your_diet_plans">Your Diet Plans</string>
    <string name="your_fitness_plans">Your Fitness Plans</string>
    <string name="give_your_diet_planner_a_name">Give Your Diet Planner a Name</string>
    <string name="add_your_diet_plan_here">Add Your Diet Plan here</string>
    <string name="set_the_date_for_the_planner">Set the Date for the Planner</string>
    <string name="todo">TODO</string>
    <string name="give_your_payment_plan_a_name">Give Your Payment plan a name</string>
    <string name="item_label">item label</string>
    <string name="your_payment_plans">Your Payment Plans</string>
    <string name="paycue_respects_user_privacy_collecting_personal_data_such_as_user_details_and_payment_schedules_solely_to_enhance_user_experience_we_do_not_share_or_sell_user_data_unless_required_by_law_or_to_fulfill_user_requests_users_can_access_modify_or_delete_their_stored_information_by_using_the_app_users_agree_to_this_policy">\'PayCue respects user privacy, collecting personal data such as user details and payment schedules solely to enhance user experience. We do not share or sell user data unless required by law or to fulfill user requests. Users can access, modify, or delete their stored information. By using the app, users agree to this policy.\'</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="plan">Plan</string>
    <string name="add_your_plan">Add Your Plan</string>
    <string name="add_your_payement_plan">Add Your Payement Plan</string>
    <string name="update_your_plan">Update Your Plan</string>
    <string name="update_your_payment_plan">Update Your Payment Plan</string>
    <string name="in_the_payment_plans_section_you_ll_find_all_your_scheduled_payments_easily_manage_and_update_your_financial_commitments_set_reminders_and_track_bills_with_simple_interfaces_stay_on_top_of_your_finances_by_adding_editing_or_deleting_plans_effortlessly">In the \'Payment Plans\' section, you\'ll find all your scheduled payments. Easily manage and update your financial commitments, set reminders, and track bills. With simple interfaces, stay on top of your finances by adding, editing, or deleting plans effortlessly.</string>
    <string name="you_personal_payment_planner">You Personal Payment Planner</string>
    <string name="your_personal_payment_planner">Your Personal Payment Planner</string>
    <string name="add_a_bill_as_an_image">Add a Bill As an Image</string>
    <string name="add_a_name_for_the_bill">Add a Name for the Bill</string>
    <string name="set_the_date_for_the_bill">Set the Date for the Bill</string>
    <string name="add_details_for_your_bill">Add Details for Your Bill</string>
    <string name="save_your_bill">Save Your Bill</string>
    <string name="your_bill_goes_here">Your Bill Goes Here</string>
    <string name="bill_date">Bill Date</string>
</resources>