<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/logoLayout"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="70dp"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/applogo" />




    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/logoLayout"
        android:paddingTop="10dp"
        android:text="@string/your_personal_payment_planner"
        android:gravity="center"
        android:layout_marginBottom="-5dp"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="12sp"/>



    <Button
        android:id="@+id/addDietplannerbutton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/purple_border"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/your_payment_plans"/>

    <TextView
        android:id="@+id/policyTextView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="-27dp"
        android:text="@string/paycue_respects_user_privacy_collecting_personal_data_such_as_user_details_and_payment_schedules_solely_to_enhance_user_experience_we_do_not_share_or_sell_user_data_unless_required_by_law_or_to_fulfill_user_requests_users_can_access_modify_or_delete_their_stored_information_by_using_the_app_users_agree_to_this_policy"
        android:textSize="10sp"/>


</RelativeLayout>
